--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,8 @@ name: Testing
 
 on:
   push:
+    branches:
+    - main
   pull_request:
     branches:
     - main
@@ -13,12 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        working-directory: ./src
+      - name: Set up Python 3.10
         uses: actions/setup-python@v3
       - name: Install linters
         run: |
-          python --version
           python -m pip install --upgrade pip
           pip install bandit black flake8 mypy types-requests
       - name: Lint with flake8
