Write Django cmd for running lint

--- a/src/Pipfile
+++ b/src/Pipfile
@@ -15,3 +15,8 @@ psycopg2-binary = "*"
 [dev-packages]
 django-debug-toolbar = "*"
 nplusone = "*"
+bandit = "*"
+black = "*"
+flake8 = "*"
+mypy = "*"
+types-requests = "*"
