--- a/ops/manifests/manifest-staging.yaml
+++ b/ops/manifests/manifest-staging.yaml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: getgov-unstable
+- name: getgov-staging
   buildpacks:
     - python_buildpack
   path: ../../src
@@ -17,7 +17,7 @@ applications:
     # Tell Django where to find its configuration
     DJANGO_SETTINGS_MODULE: registrar.config.settings
   routes:
-    - route: getgov-unstable.app.cloud.gov
+    - route: getgov-staging.app.cloud.gov
   services:
   - getgov-credentials
-  - getgov-unstable-database
+  - getgov-staging-database
