--- a/ops/manifests/manifest-unstable.yaml
+++ b/ops/manifests/manifest-unstable.yaml
@@ -8,7 +8,7 @@ applications:
   memory: 512M
   stack: cflinuxfs3
   timeout: 180
-  command: gunicorn registrar.config.wsgi -t 60
+  command: ./run.sh
   health-check-type: http
   health-check-http-endpoint: /health
   env:
@@ -20,4 +20,4 @@ applications:
     - route: getgov-unstable.app.cloud.gov
   services:
   - getgov-credentials
-  - getgov-database
+  - getgov-unstable-database
