Add Login.gov *\o/*
This commit incldues a wrapper application which handles
the Private Key JWT method of authenticating via OpenID
Connect using the underlying pyoidc library.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ docs/research/data/**
 public/
 credentials*
 
+*pem
+*crt
+
+*bk
+
 ### The usual garbage files ###
 
 # Byte-compiled / optimized / DLL files
