--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,7 @@ on:
   push:
     branches:
       - main
+      - ik/stable-uswds-assets
 
     tags:
       - v*
@@ -24,6 +25,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Compile USWDS assets
+        working-directory: ./src
+        run: |
+          docker compose run node npm install && 
+          docker compose run node npx gulp compile && 
+          docker compose run node npx gulp 
       - name: Deploy to cloud.gov sandbox
         uses: 18f/cg-deploy-action@main
         env:
