Fix missing .env file

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,10 +10,6 @@ services:
       - db
     working_dir: /app
     entrypoint: python /app/docker_entrypoint.py
-    env_file:
-      # Non-version controlled file containing DJANGO_SP_PRIVATE_KEY
-      # and other sensitive values
-      - .env
     environment:
       # Send stdout and stderr straight to the terminal without buffering
       - PYTHONUNBUFFERED=yup
@@ -27,6 +23,9 @@ services:
       - DJANGO_DEBUG=True
       # Tell Django where it is being hosted
       - DJANGO_BASE_URL="localhost:8080"
+      # --- These keys are obtained from `.env` file ---
+      # Set a private JWT signing key for Login.gov
+      - DJANGO_SECRET_LOGIN_KEY
     stdin_open: true
     tty: true
     ports:
