--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - db
     working_dir: /app
     entrypoint: python /app/docker_entrypoint.py
+    deploy:
+      restart_policy:
+        condition: on-failure
+        max_attempts: 5
     environment:
       # Send stdout and stderr straight to the terminal without buffering
       - PYTHONUNBUFFERED=yup
@@ -32,7 +36,8 @@ services:
       - "8080:8080"
     # command: "python"
     command: >
-      bash -c " python manage.py migrate && python manage.py runserver 0.0.0.0:8080"
+      bash -c " python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8080"
 
   db:
     image: postgres:latest
