Fix security check tests in Actions environment

--- a/src/zap.conf
+++ b/src/zap.conf
@@ -15,6 +15,9 @@
 # header, but it is not an issue in production
 10021	OUTOFSCOPE	http://app:8080/public/.*$
 10023	FAIL	(Information Disclosure - Debug Error Messages - Passive/release)
+# OIDC isn't configured in the test environment and DEBUG=True so the error messages
+# trigger this rule in a way that they don't in production
+10023	OUTOFSCOPE	http://app:8080/openid/login/
 10024	FAIL	(Information Disclosure - Sensitive Information in URL - Passive/release)
 10025	FAIL	(Information Disclosure - Sensitive Information in HTTP Referrer Header - Passive/release)
 10026	FAIL	(HTTP Parameter Override - Passive/beta)
@@ -39,9 +42,13 @@
 10037	FAIL	(Server Leaks Information via "X-Powered-By" HTTP Response Header Field(s) - Passive/release)
 10038	FAIL	(Content Security Policy (CSP) Header Not Set - Passive/beta)
 # With DEBUG=True, Django sends a 404 page without the CSP headers. This isn't true on production
-# For URLs that Zap gets that aren't present for us, skip this false positive
-10038	OUTOFSCOPE	http://app:8080/public/img/(favicon|touch-icon).png
+# For URLs that Zap gets that aren't present in the test environment, skip this false positive
+10038	OUTOFSCOPE	http://app:8080/public/img/.*
+10038	OUTOFSCOPE	http://app:8080/public/css/.*
+10038	OUTOFSCOPE	http://app:8080/public/js/.*
 10038	OUTOFSCOPE	http://app:8080/(robots.txt|sitemap.xml)
+# OIDC isn't configured in the test environment and DEBUG=True so this gives a 500 without CSP headers
+10038	OUTOFSCOPE	http://app:8080/openid/login/
 10039	FAIL	(X-Backend-Server Header Information Leak - Passive/beta)
 10040	FAIL	(Secure Pages Include Mixed Content - Passive/release)
 10041	FAIL	(HTTP to HTTPS Insecure Transition in Form Post - Passive/beta)
@@ -125,6 +132,9 @@
 90020	FAIL	(Remote OS Command Injection - Active/release)
 90021	FAIL	(XPath Injection - Active/beta)
 90022	FAIL	(Application Error Disclosure - Passive/release)
+# OIDC isn't configured in the test environment and DEBUG=True so these error pages
+# trigger this rule in a way that they won't in production
+90022	OUTOFSCOPE	http://app:8080/openid/login/
 90023	FAIL	(XML External Entity Attack - Active/beta)
 90024	FAIL	(Generic Padding Oracle - Active/beta)
 90025	FAIL	(Expression Language Injection - Active/beta)
