specify path as src in github actions workflows

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,11 +3,13 @@ name: Testing
 
 on:
   push:
+    paths-ignore:
+      - 'docs/**'
     branches:
-    - main
+      - main
   pull_request:
     branches:
-    - main
+      - main
 
 jobs:
   python-linting:
