--- a/src/Pipfile
+++ b/src/Pipfile
@@ -15,6 +15,8 @@ oic = "*"
 pyjwkest = "*"
 psycopg2-binary = "*"
 whitenoise = "*"
+cachetools = "*"
+requests = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
