Save button for domain application

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -1,7 +1,12 @@
 [mypy]
 plugins =
     mypy_django_plugin.main
+# strict_optional: treat None as compatible with every type?
+# `var: int` is equal to `var: int|None`
 strict_optional = True
+# implicit_optional: treat arguments a None default value as implicitly Optional?
+# `var: int = None` is equal to `var: Optional[int] = None`
+implicit_optional = True
 
 [mypy.plugins.django-stubs]
 django_settings_module = "registrar.config.settings"
