Refactor fixtures from JSON to Python

--- a/src/Pipfile
+++ b/src/Pipfile
@@ -11,6 +11,7 @@ django-allow-cidr = "*"
 django-auditlog = "*"
 django-csp = "*"
 environs = {extras=["django"]}
+Faker = "*"
 gunicorn = "*"
 oic = "*"
 pyjwkest = "*"
