--- a/.github/workflows/loaddata.yaml
+++ b/.github/workflows/loaddata.yaml
@@ -28,7 +28,7 @@ jobs:
           cf_password: ${{ secrets.CF_PASSWORD }}
           cf_org: cisa-getgov-prototyping
           cf_space: staging
-          full_command: "cf run-task getgov-staging --wait --command 'python manage.py flush' --name flush"
+          full_command: "cf run-task getgov-staging --wait --command 'python manage.py flush --no-input' --name flush"
 
       - name: Load fake data for staging
         uses: 18f/cg-deploy-action@main
