--- a/src/zap.conf
+++ b/src/zap.conf
@@ -49,6 +49,8 @@
 10038	OUTOFSCOPE	http://app:8080/public/css/.*
 10038	OUTOFSCOPE	http://app:8080/public/js/.*
 10038	OUTOFSCOPE	http://app:8080/(robots.txt|sitemap.xml|TODO)
+# This URL always returns 404, so include it as well.
+10038	OUTOFSCOPE	http://app:8080/todo
 # OIDC isn't configured in the test environment and DEBUG=True so this gives a 500 without CSP headers
 10038	OUTOFSCOPE	http://app:8080/openid/login/
 10039	FAIL	(X-Backend-Server Header Information Leak - Passive/beta)
