--- a/ops/manifests/manifest-stable.yaml
+++ b/ops/manifests/manifest-stable.yaml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: getgov-unstable
+- name: getgov-stable
   buildpacks:
     - python_buildpack
   path: ../../src
@@ -17,11 +17,11 @@ applications:
     # Tell Django where to find its configuration
     DJANGO_SETTINGS_MODULE: registrar.config.settings
     # Tell Django where it is being hosted
-    DJANGO_BASE_URL: https://getgov-unstable.app.cloud.gov
+    DJANGO_BASE_URL: https://getgov-stable.app.cloud.gov
     # Tell Django how much stuff to log
     DJANGO_LOG_LEVEL: INFO
   routes:
-    - route: getgov-unstable.app.cloud.gov
+    - route: getgov-stable.app.cloud.gov
   services:
   - getgov-credentials
-  - getgov-unstable-database
+  - getgov-stable-database
