fix action syntax pull_request

--- a/.github/workflows/deploy-lmm.yaml
+++ b/.github/workflows/deploy-lmm.yaml
@@ -3,12 +3,12 @@
 name: Build and deploy dev sandbox
 
 on:
-  pull-request:
+  pull_request:
     paths-ignore:
       - 'docs/**'
 
     branches:
-      - 'lmm/**'     
+      - 'lmm/**'   
 
 jobs:
   deploy-lmm:
