--- a/.github/workflows/deploy-stable.yaml
+++ b/.github/workflows/deploy-stable.yaml
@@ -1,7 +1,7 @@
 # This workflow runs on pushes of tagged commits.
 # "Releases" of tagged commits will deploy `main` to Stable.
 
-name: Build and deploy stable
+name: Build and deploy stable for tagged release
 
 on:
   push:
