--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -11,7 +11,7 @@ on:
     inputs:
       environment:
         type: choice
-        description: Which environment should we flush and re-load data for?
+        description: Which environment should we run migrations for?
         options:
           - stable
           - lmm
