--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -4,12 +4,25 @@ name: Build and deploy developer sandbox
 run-name: Build and deploy developer sandbox for branch ${{ github.ref_name }}
 
 on:
-  pull_request:
-    paths-ignore:
-      - 'docs/**'
+  workflow_run:
+    workflows: [Testing]
+    types:
+      - completed
 
 jobs:
   variables: 
+    if: |
+      ${{
+        github.event.workflow_run.conclusion == 'success' && 
+        github.event_name == 'pull_request' &&
+        (
+          startsWith(github.head_ref, 'ik/') ||
+          startsWith(github.head_ref, 'sspj/') ||
+          startsWith(github.head_ref, 'mr/') ||
+          startsWith(github.head_ref, 'nmb/') ||
+          startsWith(github.head_ref, 'lmm/')
+        )
+      }}
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
@@ -21,13 +34,6 @@ jobs:
           script: |
             core.setOutput('environment', '${{ github.head_ref }}'.split("/")[0]);
   deploy:
-    if: | 
-      ${{startsWith(github.head_ref, 'ik/')
-        || startsWith(github.head_ref, 'sspj/')
-        || startsWith(github.head_ref, 'mr/')
-        || startsWith(github.head_ref, 'nmb/')
-        || startsWith(github.head_ref, 'lmm/')
-      }}
     runs-on: ubuntu-latest
     needs: [variables]
     steps:
@@ -55,6 +61,7 @@ jobs:
           cf_space: ${{ env.ENVIRONMENT }}
           push_arguments: "-f ops/manifests/manifest-${{ env.ENVIRONMENT }}.yaml"
   comment:
+    if: ${{ github.event.action == 'opened' }}
     runs-on: ubuntu-latest
     needs: [variables, deploy]
     steps:
