--- a/.github/workflows/reset-db.yaml
+++ b/.github/workflows/reset-db.yaml
@@ -32,8 +32,8 @@ jobs:
       - name: Delete existing data for ${{ github.event.inputs.environment }}
         uses: 18f/cg-deploy-action@main
         with:
-          cf_username: ${{ secrets[CF_USERNAME] }}
-          cf_password: ${{ secrets[CF_PASSWORD] }}
+          cf_username: ${{ secrets[env.CF_USERNAME] }}
+          cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-getgov-prototyping
           cf_space: ${{ github.event.inputs.environment }}
           full_command: "cf run-task getgov-${{ github.event.inputs.environment }} --wait --command 'python manage.py flush --no-input' --name flush"
